<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/bg_gray">
        <TextView
            style="@style/scoreboard_title_tv_style"
            android:layout_weight="2.2"
            android:text="@string/scoreboard_team" />
        <TextView
            style="@style/scoreboard_title_tv_style"
            android:layout_weight="1.5"
            android:text="@string/scoreboard_result" />
        <TextView
            style="@style/scoreboard_title_tv_style"
            android:layout_weight="1"
            android:text="@string/scoreboard_scored" />
        <TextView
            style="@style/scoreboard_title_tv_style"
            android:layout_weight="1"
            android:text="@string/scoreboard_card" />
        <TextView
            style="@style/scoreboard_title_tv_style"
            android:layout_weight="1"
            android:text="@string/scoreboard_score" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/background_gray"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <top.smartsport.www.listview_pulltorefresh.PullToRefreshListView
            android:id="@+id/scoreboard_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/bg_gray"
            android:dividerHeight="20px"
            android:scrollbars="none" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:id="@+id/empty">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30px"
                    android:src="@mipmap/myfavempty" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="暂无数据"
                    android:textColor="@color/text_gray"
                    android:textSize="17dip" />

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>