<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <include layout="@layout/layout_actionbar" />
    </FrameLayout>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@android:color/white">
        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/tab_scoreboard"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tab_scoreboard_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_centerInParent="true"
                android:text="@string/data_analysis_scoreboard"/>
            <View
                android:id="@+id/tab_scoreboard_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/theme_color"
                android:layout_alignParentBottom="true"
                android:visibility="invisible"/>
        </com.zhy.autolayout.AutoRelativeLayout>
        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/tab_scorer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tab_scorer_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_centerInParent="true"
                android:text="@string/data_analysis_scorer"/>
            <View
                android:id="@+id/tab_scorer_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/theme_color"
                android:layout_alignParentBottom="true"
                android:visibility="invisible"/>
        </com.zhy.autolayout.AutoRelativeLayout>
        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/tab_assist"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tab_assist_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_centerInParent="true"
                android:text="@string/data_analysis_assist"/>
            <View
                android:id="@+id/tab_assist_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/theme_color"
                android:layout_alignParentBottom="true"
                android:visibility="invisible"/>
        </com.zhy.autolayout.AutoRelativeLayout>
    </com.zhy.autolayout.AutoLinearLayout>
    <FrameLayout
        android:id="@+id/tab_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</com.zhy.autolayout.AutoLinearLayout>