<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1">
        <FrameLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        </FrameLayout>
    </LinearLayout>
    <View
        android:id="@+id/main_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160px">

        <RadioGroup
            android:layout_centerVertical="true"
            android:id="@+id/main_bottom_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/white"
            >

            <RadioButton
                android:id="@+id/main_tabs_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_zx"
                android:drawableTop="@drawable/main_zx_selector"
                android:textSize="38px"
                android:textColor="@drawable/main_color_selector"
                android:drawablePadding="6px"
                android:gravity="center"
                android:paddingLeft="0dp"
                android:button="@null"
                android:layout_weight="1"
                android:checked="false"
                android:scaleX="0.9"
                android:scaleY="0.9"/>


            <RadioButton
                android:id="@+id/main_tabs_qx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_qx"
                android:drawableTop="@drawable/main_qx_selector"
                android:textSize="38px"
                android:textColor="@drawable/main_color_selector"
                android:drawablePadding="6px"
                android:gravity="center"
                android:paddingLeft="0dp"
                android:button="@null"
                android:layout_weight="1"
                android:scaleX="0.9"
                android:scaleY="0.9"/>

            <RadioButton
                android:id="@+id/main_tabs_ss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="赛事"
                android:drawableTop="@drawable/main_ss_selector"
                android:textSize="38px"
                android:textColor="@drawable/main_color_selector"
                android:drawablePadding="6px"
                android:gravity="center"
                android:paddingLeft="0dp"
                android:button="@null"
                android:layout_weight="1"
                android:scaleX="0.9"
                android:scaleY="0.9"/>

            <RadioButton
                android:id="@+id/main_tabs_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_wd"
                android:drawableTop="@drawable/main_wd_selector"
                android:textSize="38px"
                android:textColor="@drawable/main_color_selector"
                android:drawablePadding="6px"
                android:gravity="center"
                android:paddingLeft="0dp"
                android:button="@null"
                android:layout_weight="1"
                android:scaleX="0.9"
                android:scaleY="0.9"/>
        </RadioGroup>
        <TextView
            android:id="@+id/main_msg_num"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="760px"
            android:text="0"
            android:textSize="25px"
            android:visibility="gone"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/background_red"/>
    </RelativeLayout>

</LinearLayout>
